--- a/job_searching_platform_frontend/public/index.html
+++ b/job_searching_platform_frontend/public/index.html
@@ -28,6 +28,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome for fallback bell icons, if needed -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-M4FRlP0MzIjlLB2HOpLNHUekHfM2CJmlaAvUYUbFPGxJmTX0pPjA4wX6wUjp48v9aKAv1AF1pTkm7oBo4A0gpQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>KAVIA App</title>
   </head>
   <body>
